# ByteLock

./: Cargo.toml  README.md
src/: cli.rs  encryption.rs  main.rs  metadataheader.rs
